--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node --watch index.js"
   },
   "keywords": [],
@@ -13,7 +13,10 @@
   "dependencies": {
     "dotenv": "16.4.7",
     "express": "4.21.2",
-    "mongodb": "^6.13.0",
+    "mongodb": "6.13.0",
     "mongoose": "8.9.7"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
