--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test.watch" : "jest --watchAll",
     "start": "node --watch index.js"
   },
   "keywords": [],
@@ -17,7 +18,7 @@
     "mongoose": "8.9.7"
   },
   "devDependencies": {
-    "jest": "29.7.0",
-    "supertest": "7.0.0"
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
